# summarizer

./: .gitignore  API_KEY_CHANGES.md  DEPLOYMENT.md  LOGGING_IMPROVEMENTS.md  README.md  check_files.py  check_new_video.py  check_status.py  cleanup_logs.py  debug_api_key.py  debug_transcript.py  env.example  generate_encryption_key.py  generic_tests.ipynb  pyproject.toml  requirements.txt  sample_summary.txt  simple_test.py  start.py  start_backend.py  temp_import.txt  test_backend_transcript.py  test_gemini.py  test_gemini_integration.py  test_no_proxy.py  test_transcript_endpoint.py  transcript_extractor.py  transcript_no_proxy_wcD4S7mNbE8.txt  transcript_proxy_working.txt
backend/: main.py
backend/api/: auth.py  chat.py  summary.py  video.py
backend/middleware/: auth.py
backend/models/: auth.py  schemas.py
backend/services/: auth_service.py  chat_service.py  summarizer.py  vector_store.py  video_processor.py
backend/utils/: logging_config.py  text_processor.py
frontend/: api-keys.html  api_base.js  debug_main_app.html  dropdown_debug.html  index.html  login.html  register.html  simple_test.html  test_main_app_auth.html  videos.html
